// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widgets/adminBadge should match the snapshot for Admin 1`] = `
<div>
  <div
    class="AdminBadge"
  >
    <div
      class="AdminBadge__box"
    >
      Admin
    </div>
  </div>
</div>
`;

exports[`widgets/adminBadge should match the snapshot for TeamAdmin 1`] = `
<div>
  <div
    class="AdminBadge"
  >
    <div
      class="AdminBadge__box"
    >
      Team Admin
    </div>
  </div>
</div>
`;
